--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>sudha</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="utf-8">
+    <title>Sudha Verma</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Stalemate&display=swap" rel="stylesheet">
+</head>
+
+<body>
+<div class="" id="main">
+    <h1 id="title">Sudha Verma</h1>
+
+    <div class="" id="img-div">
+        <img src="sudha.png" alt="" id="image" >
+        <p id="img-caption"><em>DevOps Engineer.</em></p>
+    </div>
+
+    <div class="" id="info">
+        <p>I am enthusiastic DevOps Engineer with more than 5 years of experience in IT, eager to contribute to team success through hard work, attention to detail and excellent organizational skills.
+            I am dedicated to progress my career in IT where I contribute to the active growth and productivity of the company.
+            I am passionate about acquiring new skills and have always been open to learn new tools and technology.
+            My current skills are:
+            Linux | AWS | Terraform | Docker | Kubernetes | GIT | GitHub | Bitbucket pipeline </p>
+
+        <a href="https://www.linkedin.com/in/sudha-v-1322656b/" target="_blank">My LinkedIn Profile!</a> <br>
+        <a href="https://github.com/sudha098" target="_blank">My Github Profile!</a>
+    </div>
+</div>
+
+</body>
+
+</html>
