--- a/index.html
+++ b/index.html
@@ -3,32 +3,74 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href=" images/woman.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
     <title>Sudha Verma</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Stalemate&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<div class="" id="main">
-    <h1 id="title">Sudha Verma</h1>
-
-    <div class="" id="img-div">
-        <img src="sudha.png" alt="" id="image" >
-        <p id="img-caption"><em>DevOps Engineer.</em></p>
+    <div class="top-container" id="">
+        <!-- <div>
+            <ul>
+                <li><a href="default.asp">Home</a></li>
+                <li><a href="news.asp">News</a></li>
+                <li><a href="contact.asp">Contact</a></li>
+                <li><a href="about.asp">About</a></li>
+              </ul>
+        </div> -->
+        <h1 id="">Sudha Verma</h1>
+        <h2><em><span class="devops">DevOps</span> Engineer</em></h2>
     </div>
 
-    <div class="" id="info">
-        <p>I am enthusiastic DevOps Engineer with more than 5 years of experience in IT, eager to contribute to team success through hard work, attention to detail and excellent organizational skills.
-            I am dedicated to progress my career in IT where I contribute to the active growth and productivity of the company.
-            I am passionate about acquiring new skills and have always been open to learn new tools and technology.
-            My current skills are:
-            Linux | AWS | Terraform | Docker | Kubernetes | GIT | GitHub | Bitbucket pipeline </p>
-
-        <a href="https://www.linkedin.com/in/sudha-v-1322656b/" target="_blank">My LinkedIn Profile!</a> <br>
-        <a href="https://github.com/sudha098" target="_blank">My Github Profile!</a>
+    <div class="middle-container">
+        <div class="profile">
+            <img src="images/sudha-img.png" alt="">
+            <h2>Hello</h2>
+            <p class="intro">I am enthusiastic DevOps Engineer with more than 5 years of experience in IT, eager to
+                contribute to team
+                success through hard work, attention to detail and excellent organizational skills.
+                I am dedicated to progress my career in IT where I contribute to the active growth and productivity of
+                the company.
+                I am passionate about acquiring new skills and have always been open to learn new tools and technology.
+            </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills</h2>
+            <div class="skill-row">
+                <img class="linux-img" src="images/linux.png" alt="">
+                <h3>Linux</h3>
+                <p class="linux-description">
+                    I am <strong>Red Hat Certified Engineer</strong>. I have more than 4 years of experience in Linux system adminitration.</p>
+            </div>
+            <div class="skill-row">
+                <img class="aws-img" src="images/aws.png" alt="">
+                <h3>AWS</h3>
+                <p class="aws-description"> I am trained and experienced in AWS cloud. I have worked with AWS services like EC2, VPC, IAM, S3, LB, Route53, ASG etc.</p>
+            </div>
+            <div class="skill-row">
+                <img class="devops-img" src="images/devOps.webp" alt="">
+                <h3>DevOps</h3>
+                <p class="devops-description">I am currently working as DevOps Engineer. I have following skill sets in DevOps: GIT | GitHub | Bitbucket CI/CD | Terraform | Ansible | Docker | Kubernetes | Grafana </p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Hey! I am looking forward to start a project with you!</h3>
+            <p class="contact-message">Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
+            <a class="btn" href="mailto:sudhaverma9201@gmail.com">CONTACT ME</a>
+        </div>
     </div>
-</div>
-
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/in/sudha-v-1322656b/" target="_blank">LinkedIn</a>
+        <a class="footer-link" href="https://github.com/sudha098" target="_blank">Github</a>
+        <p class="copyright">© Sudha Verma.</p>
+    </div>
 </body>
-
 </html>
